# SoftRender

./: Application.cxx  BoundingVolume.cxx  BoundingVolume.h  CMakeLists.txt  Camera.cxx  Camera.h  GameObject.cxx  GameObject.h  GeometryPipeline.cxx  GeometryPipeline.h  Light.cxx  Light.h  Material.cpp  Material.h  Mesh.cxx  Mesh.h  Quaternions.cxx  Quaternions.h  RGBColor.cpp  RGBColor.h  RasterizeStage.cxx  RasterizeStage.h  Sampler.cpp  Sampler.h  SceneGraph.cxx  SceneGraph.h  SoftRenderer.cpp  SoftRenderer.h  Traits.h  Transform.cxx  Transform.h
